# Bhaskera

./: .gitignore  README.md  bhaskera-activate.sh  check_tq.py  nreq.txt  pyproject.toml  requirements.txt  setup.sh  test_vllm_stream.py
configs/: 2node.yaml  3gpu.yaml  README.md  config.yaml  config_custom_data.yaml  config_falcon.yaml  finetune_param_local_data.yaml  inference_param2.yaml  inference_speculative.yaml  inference_turboquant.yaml  liger.yaml  liger_with_dashboard.yaml  local_data_tokenize_chatml.yaml  param2.yaml  qwen.yaml  qwen_ddp.yaml  qwen_hybrid_shard.yaml  test_param.yaml  token_falcon.yaml  tokenize.yaml  tokenize_qwen.yaml  train.yaml
configs/grafana/: bhaskera_finetuning.json
logs/: bhaskera_500094_rpgpu005.err  bhaskera_500094_rpgpu005.out  bhaskera_501913_rpgpu005.err  bhaskera_501913_rpgpu005.out  bhaskera_501925_rpgpu005.err  bhaskera_501925_rpgpu005.out  bhaskera_501927_rpgpu005.err  bhaskera_501927_rpgpu005.out  bhaskera_501935_rpgpu005.err  bhaskera_501935_rpgpu005.out
scripts/: benchmark_system.py  inference.sh  inference.slurm  submit.sh
slurm/: submit.sh  sweep.sh
src/bhaskera/: config.py  introspect.py
src/bhaskera/data/: __init__.py  registry.py  tokenize.py
src/bhaskera/data/datasets/: __init__.py  local_chat.py  openassistant.py  redpajama.py  ultrachat.py
src/bhaskera/distributed/: __init__.py  checkpoint.py  ddp.py  wrap.py
src/bhaskera/inference/: __init__.py  engine.py  kv_cache.py  lloyd_max.py  test_inference.py  vllm_turboquant.py
src/bhaskera/inference/backends/: __init__.py  hf.py  ray_vllm.py
src/bhaskera/inference/tests/: test_inference.py
src/bhaskera/launcher/: dashboard.py  infer.py  monitoring.py  tokenize.py  train.py  worker.py
src/bhaskera/models/: __init__.py  loader.py  lora.py
src/bhaskera/trainer/: __init__.py  checkpointing.py  loop.py  moe.py
src/bhaskera/utils/: __init__.py  system_stats.py
src/bhaskera/utils/loggers/: __init__.py  base.py  mlflow_logger.py  ray_logger.py  wandb_logger.py
