[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bhaskera"
version = "2.2.0"
description = "Ray-native distributed LLM training and inference framework with FSDP2, TurboQuant KV cache, speculative decoding, and integrated Ray Dashboard / Prometheus / Grafana observability"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45,<5.0.0",
    # 'default' extra pulls in dashboard, metrics agent, prometheus_client.
    "ray[train,data,default]>=2.10",
    "peft>=0.10",
    "pyyaml>=6.0",
    "requests>=2.31",
    "accelerate>=0.20",
    "datasets>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "tensorboardx>=2.6",
    "safetensors>=0.4",
    "tqdm>=4.60",
    "psutil>=5.9",
    "packaging>=23.0",
    "omegaconf>=2.3.0",
    # NVML bindings for cheap, sub-millisecond GPU telemetry
    "nvidia-ml-py>=12.535",
    # Triton-fused RMSNorm / RoPE / SwiGLU / CrossEntropy kernels.
    "liger-kernel>=0.5",
]

[project.optional-dependencies]
wandb     = ["wandb>=0.16"]
mlflow    = ["mlflow>=2.10"]
flash     = ["flash-attn>=2.5"]
dev       = ["pytest>=7", "ruff>=0.4"]
inference = ["scipy>=1.10"]

# Convenience meta-extra: install everything needed for the full
# observability stack (Ray Dashboard already comes with default).
observability = ["wandb>=0.16", "mlflow>=2.10"]

[project.scripts]
bhaskera-train    = "bhaskera.launcher.train:main"
bhaskera-diag     = "bhaskera.launcher.diagnostics:main"
bhaskera-infer    = "bhaskera.launcher.infer:main"
bhaskera-tokenize = "bhaskera.launcher.tokenize:main"   # fix #28
bhaskera-dashboard = "bhaskera.launcher.dashboard:main"
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
